k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  namespace: voting-app
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: 853931821519.dkr.ecr.us-east-1.amazonaws.com/devsecops-rac3-registry:result2
        name: result
        ports:
        - containerPort: 80
          name: result
