k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  namespace: voting-app1
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: 853931821519.dkr.ecr.us-east-1.amazonaws.com/devsecops-rac3-registry:vote
        name: vote
        ports:
        - containerPort: 80
          name: vote
