k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  namespace: voting-app
  name: result
spec:
  type: NodePort
  ports:
  - name: "result-service"
    port: 80
    targetPort: 80
    nodePort: 31001
  selector:
    app: result
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: voting-app
#   name: ingress-result
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: result
#               port:
#                 number: 5001
