k8s-specifications/ingresspath.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vote
  namespace: voting-app
spec:
  #Used to target the nginx ingress controller default is nginx
  ingressClassName: nginx
  rules:
    - host: nextgends-rac3.axle-interns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-internal
                port: 
                  number: 80
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result-internal
                port: 
                  number: 80
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: voting-app
#   name: ingress-voting
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#         - path: /vote
#           pathType: Exact
#           backend:
#             service:
#               name: vote
#               port:
#                 number: 5000
#         - path: /result
#           pathType: Exact
#           backend:
#             service:
#               name: result
#               port:
#                 number: 5001
